# resume

./: .gitignore  Dockerfile  Makefile  README  README.md  TODO.md  compile.sh  cv.tex  everything.docx  everything.tex  generate.py  justfile  pyproject.toml  requirements.txt  requirements_dev.txt  resume.cls  resume.docx  resume.html  resume.md  resume.py  resume.rtf  resume.tex  resume.yaml  resume_all.tex  resume_eng_research.tex  resume_short.tex  resume_software.tex  skills.tex  template.docx  whoami.tex  whoami.yaml  wscript
awards/: cgc_thesis.tex  cgc_thesis.yaml  ugrc.tex  ugrc.yaml  ugrc_symposium.tex  ugrc_symposium.yaml
education/: bachelors.tex  bachelors.yaml  college.tex  college.yaml  hs.tex  hs.yaml  masters.tex  masters.yaml
jobs/: aramark.tex  aramark.yaml  bigcompany.tex  bigcompany.yaml  conde_nast.tex  conde_nast.yaml  conf_srvcs_painter.tex  conf_srvcs_painter.yaml  dv.tex  dv.yaml  eaze.tex  eaze.yaml  fmg.tex  gmg.tex  gmg.yaml  idottv.tex  idottv.yaml  me_grader.tex  me_grader.yaml  me_oa.tex  me_oa.yaml  nodejitsu.tex  nodejitsu.yaml  nodejitsu_junior.tex  nodejitsu_senior.tex  panco.tex  panco.yaml  procore.tex  procore.yaml  ra.tex  ra.yaml  sqsp.tex  sqsp.yaml  ta.tex  ta.yaml  werc.tex  werc.yaml
projects/: cackledaemon.tex  cackledaemon.yaml  coprctl.tex  coprctl.yaml  ecstatic.tex  ecstatic.yaml  gshell.py.tex  gshell.py.yaml  ihydra.tex  ihydra.yaml  korben-twitter.tex  korben-twitter.yaml  korbenware.tex  korbenware.yaml  matanuska.yaml  old-memes.tex  old-memes.yaml  omsxctl.tex  omsxctl.yaml  plusdeck.yaml  pseudo.tex  pyee.tex  (+10 more)
(+55 files in other folders)
